# enm_2021

./: .gitignore  README.md
lab1/: lab01.m  lab01_2.m
lab10/: .gitignore  generator.m  main.c
lab2/: .gitignore  lab2.m
lab3/: .gitignore  Main.java  Zadanie.java  generator.m
lab4/: .gitignore  generator.m
lab4/src/: Main.java
lab5/: .gitignore  CMakeLists.txt  generator.m  main.cpp
lab5/include/: FileUtils.hpp
lab6/: CMakeLists.txt  generator.m  main.cpp
lab6/lib/: CMakeLists.txt
lab6/lib/src/: mgmres.c
lab7/: CMakeLists.txt  generator.m  main.c
lab8/: .gitignore  generator.m  main.c
lab9/: .gitignore  CMakeLists.txt  generator.m  main.cpp
